--- a/lab_notebook.ipynb
+++ b/lab_notebook.ipynb
@@ -18,7 +18,13 @@
     "2. Transform your variables --- particularly categorical ones --- for use in your regression analysis.\n",
     "3. Implement an 80/20 train-test split. Put the test data aside.\n",
     "4. Build some simple linear models that include no transformations or interactions. Fit them, and determine their RMSE and $R^2$ on the both the training and test sets. Which of your models does the best?\n",
+    "\n",
+    "The model using Beds as the predictor performs the best. It has the lowest RMSE and the highest R2 on both the training and test sets. This means the number of beds explains Airbnb price variation better than Zipcode or Review Scores Rating.\n",
+    "\n",
     "5. Make partial correlation plots for each of the numeric variables in your model. Do you notice any significant non-linearities? \n",
+    "\n",
+    "The partial regression plots reveal that none of the predictors have a strong linear relationship with price. Beds shows a mild positive association, but the spread of points and outliers suggest some non-linearity. Zipcode and Review Scores Rating display mostly scattered patterns, indicating that their effects on price are weak and not well captured by a simple linear model.\n",
+    "\n",
     "6. Include transformations and interactions of your variables, and build a more complex model that reflects your ideas about how the features of the asset determine its value. Determine its RMSE and $R^2$ on the training and test sets. How does the more complex model your build compare to the simpler ones?\n",
     "7. Summarize your results from 1 to 6. Have you learned anything about overfitting and underfitting, or model selection?\n",
     "8. Use the `sklearn.linear_model.Lasso` to regularize your model and select the most predictive features. Which does it select? What are the RMSE and $R^2$? We'll cover the Lasso later in detail in class."
